--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "leaflet-draw": "^1.0.4",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "redux": "^4.0.5",
+    "wellknown": "^0.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
